--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Study Saturday</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
